<resources>
    <string name="app_name">Cash loans</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="amount">Сумма</string>
    <string name="period">Период</string>
    <string name="phone_number">Номер телефона</string>
    <string name="request_number">№%1$s</string>
    <string name="loan_request_status">Статус: %1$s</string>
    <string name="loan_amount">Сумма: %1$s</string>
    <string name="borrower_first_name">Имя:\u0020</string>
    <string name="borrower_second_name">Фамилия:\u0020</string>
    <string name="borrower">Заёмщик</string>
    <string name="borrower_phone_number">Номер телефона: %1$s</string>
    <string name="loan_period">Срок: %1$s</string>
    <string name="loan_request_date">Дата оформления заявки</string>
    <string name="register_loan">Оформить займ</string>
    <string name="loan_max_amount">Максимальная сумма займа</string>
    <string name="loan_request_percent">Процентная ставка:\u0020</string>
    <string name="loan_request_period">На срок </string>
    <string name="format_datetime_pattern">dd.MM.yy hh:mm</string>
    <string name="datePattern">dd.MM.yy</string>
    <string name="timePattern">hh:mm</string>
    <string name="approved">Одобрена</string>
    <string name="registered">Зарегистрирована</string>
    <string name="rejected">Отклонена</string>
    <string name="timeout_exception_msg">Время ожидания ответа сервера истекло</string>
    <string name="refresh">Обновить</string>
    <string name="unknown_host_exception_msg">Проблемы с интернет соединением</string>
    <string name="repeat">Повторить</string>
    <string name="interest_rate">Ставка: %1$s</string>
    <string name="sign_in">Войти</string>
    <string name="welcome_msg">У вас ещё нет ни одной оформленной заявки, оформите заявку с подходящими условиями.</string>
    <string name="show_conditions">Посмотреть условия</string>
    <string name="field_should_be_not_empty">Поле не должно быть пустым</string>
    <string name="percent_tv">%1$s%%</string>
    <string name="loan_approved_instructions">Ваша заявка была одобрена, для получения подробной информации обратитесь в банк.</string>
    <string name="successful_registration">Вы успешно зарегистрированы, %1$s</string>
    <string name="check_network_connection_msg">Проверьте интернет соединение</string>
    <string name="invalid_credentials_msg">Неверный логин или пароль</string>
    <string name="busy_login_msg">Логин занят</string>
    <string name="incorrect_input_msg">Заполните поля, следуя всплывающим уведомлениям</string>
    <string name="ok">ОК</string>
    <string name="max_amount_exceeded_msg">Макс. значение %1$s</string>
    <string name="show_loan_conditions">Show loan conditions</string>
    <string name="logout">Выйти</string>
    <string name="english">Английский (США)</string>
    <string name="russian">Русский</string>
    <string name="borrower_name">%1$s %2$s</string>
    <string name="loan_date">%1$s %2$s</string>
    <string name="arrange">Оформить</string>
    <string name="unknown_error_msg">Что-то пошло не так. Повторите позднее</string>
    <string name="server_unavailable">Сервер недоступен</string>
    <string name="login_empty_msg">Логин не должен быть пустым</string>
    <string name="incorrect_login_msg">Некорректный логин</string>
    <string name="incorreсе_password_msg">Некорректный пароль</string>
    <string name="too_short_password_msg">Пароль должен содержать не менее 8 символов</string>
    <string name="too_common_password_msg">Слишком простой пароль</string>
    <string name="entirely_numeric_password_msg">Пароль не может быть полностью из цифр</string>
    <string name="empty_password_msg">Введите пароль</string>
    <string name="password_too_similar_to_login_msg">Пароль очень похож на логин</string>
</resources>