<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.LoanRegistrationFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loan_card_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@color/secondaryLightColor"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".ui.LoanRegistrationFragment">

            <EditText
                android:id="@+id/first_name_et"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/last_name_et"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/amount_et"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:hint="@string/amount"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/percent_tv"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="%" />

            <Button
                android:id="@+id/loan_registration_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="Оформить" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>